--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,14 @@
 {
-  "name": "got-paper.com",
-  "short_name": "got-paper.com",
+  "name": "Got Paper?",
+  "short_name": "got-paper",
   "icons": [
     {
-      "src": "./img/icons/android-chrome-192x192.png",
+      "src": "./images/icons/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./img/icons/android-chrome-512x512.png",
+      "src": "./images/icons/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
