--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,8 @@
       "type": "image/png"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#f0f4f5",
   "theme_color": "#1660A6"
