--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,19 +3,31 @@
   "short_name": "Got Paper?",
   "icons": [
     {
-      "src": "./images/icons/android-chrome-192x192.png",
+      "src": "/images/icons/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./images/icons/android-chrome-512x512.png",
+      "src": "/images/icons/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "/images/icons/android-chrome-192x192-masked.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/images/icons/android-chrome-512x512-masked.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
-  "background_color": "#f0f4f5",
+  "background_color": "#1660A6",
   "theme_color": "#1660A6"
 }
