--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^2.6.5",
     "register-service-worker": "^1.6.2",
     "tslint-config-standard": "^9.0.0",
+    "vee-validate": "^3.2.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
