--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vue/cli-plugin-typescript": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
     "node-sass": "^4.12.0",
+    "raw-loader": "^4.0.0",
     "sass-loader": "^8.0.0",
     "typescript": "^3.4.3",
     "vue-template-compiler": "^2.6.10"
