--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^3.0.0-0",
     "nuxt": "^2.0.0",
+    "nuxt-i18n": "^6.6.1",
     "smoothscroll-polyfill": "^0.4.4",
     "vee-validate": "^3.2.5"
   },
