--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/pwa": "^3.0.0-0",
     "nuxt": "^2.0.0",
     "nuxt-i18n": "^6.6.1",
+    "portal-vue": "^2.1.7",
     "smoothscroll-polyfill": "^0.4.4",
     "vee-validate": "^3.2.5"
   },
