--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "assign-deep": "^1.0.1",
     "nuxt": "^2.0.0",
     "nuxt-i18n": "^6.6.1",
     "portal-vue": "^2.1.7",
