--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nuxt-i18n": "^6.6.1",
     "portal-vue": "^2.1.7",
     "smoothscroll-polyfill": "^0.4.4",
-    "vee-validate": "^3.2.5"
+    "vee-validate": "^3.2.5",
+    "vue-i18n": "^8.15.6"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.0",
