--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt-i18n": "^6.6.1",
     "portal-vue": "^2.1.7",
     "smoothscroll-polyfill": "^0.4.4",
+    "sort-on": "^4.1.0",
     "vee-validate": "^3.2.5",
     "vue-i18n": "^8.15.6"
   },
