--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^3.0.0-0",
     "assign-deep": "^1.0.1",
+    "dotenv": "latest",
     "nuxt": "^2.0.0",
     "nuxt-i18n": "^6.6.1",
     "portal-vue": "^2.1.7",
@@ -22,7 +23,7 @@
     "vee-validate": "^3.2.5",
     "vue-agile": "^1.0.11",
     "vue-i18n": "^8.15.6",
-    "dotenv": "latest"
+    "vue-proportion-directive": "^1.1.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.0",
